@@ -63,18 +63,6 @@ struct HashTablePerformanceMetrics : public IPerformanceMetrics {
 };
 #endif
 
-class khmer_file_exception : public std::exception
-{
-public:
-    khmer_file_exception(const char * msg) : _msg(msg) { };
-
-    virtual const char* what() const throw() {
-        return _msg;
-    }
-protected:
-    const char * _msg;
-};
-
 //
 // Sequence iterator class, test.  Not really a C++ iterator yet.
 //
