@@ -34,18 +34,14 @@ namespace khmer
 {
 
 
-struct InvalidStreamHandle : public std:: exception {
-};
-
-struct StreamReadError : public std:: exception {
-};
-
 
 namespace read_parsers
 {
 
 
-struct InvalidReadFileFormat: public std:: exception {
+class InvalidReadFileFormat: public khmer:: khmer_file_exception  {
+
+public:
 
     InvalidReadFileFormat(
         char const * exc_name,
@@ -61,8 +57,9 @@ protected:
 
 };
 
-struct InvalidFASTAFileFormat: public InvalidReadFileFormat {
+class InvalidFASTAFileFormat: public InvalidReadFileFormat {
 
+public:
     InvalidFASTAFileFormat(
         char const * reason	= NULL,
         char const * evidence	= NULL
@@ -70,8 +67,9 @@ struct InvalidFASTAFileFormat: public InvalidReadFileFormat {
 
 };
 
-struct InvalidFASTQFileFormat: public InvalidReadFileFormat {
+class InvalidFASTQFileFormat: public InvalidReadFileFormat {
 
+public:
     InvalidFASTQFileFormat(
         char const * reason	= NULL,
         char const * evidence	= NULL
