@@ -3,13 +3,3 @@
 # Copyright (C) Michigan State University, 2009-2013. It is licensed under
 # the three-clause BSD license; see doc/LICENSE.txt.
 # Contact: khmer-project@idyll.org
-#
-import os
-thisdir = os.path.dirname(__file__)
-thisdir = os.path.abspath(thisdir)
-
-pythondir = os.path.join(thisdir, '..', 'python')
-pythondir = os.path.abspath(pythondir)
-
-import sys
-# sys.path.insert(0, pythondir)
